fix overflowing text of the cards

--- a/app/assets/stylesheets/notecard.css
+++ b/app/assets/stylesheets/notecard.css
@@ -2,7 +2,30 @@
   width: 12rem;
   height: 17rem;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  /* white-space: nowrap; */
+  /* overflow: hidden;
+  text-overflow: ellipsis; */
 }
+
+.card-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card-text {
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 7;
+  -webkit-box-orient: vertical;
+}
+
+/* .card-date {
+  align-self: flex-end;
+} */
 
 .card-date p {
   margin: 0;
